<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ChangePasswordActivity">

    <ImageView
            android:id="@+id/iv_change_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_3sdp"
            android:onClick="onClick"
            android:layout_marginTop="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_arrow_back"/>

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sc_change_password"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/iv_change_password_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <android.support.constraint.ConstraintLayout
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                tools:context=".ui.activities.DashBoardActivity">

            <ImageView
                    android:id="@+id/iv_changepassword_company_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/company_logo"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/tv_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Change"
                    android:textSize="@dimen/_17sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/ralewayregular"
                    android:layout_marginTop="@dimen/_25sdp"
                    app:layout_constraintTop_toBottomOf="@id/iv_changepassword_company_logo"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textSize="@dimen/_17sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/ralewaybold"
                    android:layout_marginTop="@dimen/_1sdp"
                    app:layout_constraintTop_toBottomOf="@id/tv_change"
                    app:layout_constraintStart_toStartOf="parent"/>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:hint="@string/old_pwd"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password">

                <EditText
                        android:id="@+id/et_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBlack"
                        android:gravity="start"
                        android:drawableEnd="@mipmap/key"
                        android:paddingEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ralewayregular"
                        android:textColorHint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:hint="@string/new_pwd"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_old_password">

                <EditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:gravity="start"
                        android:drawableEnd="@mipmap/key"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColorHint="@color/colorBlack"
                        android:fontFamily="@font/ralewayregular"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:hint="@string/cnf_pwd"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_new_password">

                <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:gravity="start"
                        android:drawableEnd="@mipmap/key"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColorHint="@color/colorBlack"
                        android:fontFamily="@font/ralewayregular"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_white_background"
                    android:text="SUBMIT"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:onClick="onClick"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>